# src/api/swagger/models/index.ts
@@ -14,9 +14,10 @@ export * from './CouponUserCodeVm';
 export * from './CouponUserCodeVmPaginatedResponse';
 export * from './CouponVm';
 export * from './CouponVmPaginatedResponse';
+export * from './CreateSiteApiKeyDto';
 export * from './HttpStatusCode';
 export * from './Int32EntityCreatedVm';
-export * from './Int32StringCreateSiteApiKeyVm';
+export * from './Int32StringEntityCreatedCompositeVm';
 export * from './LoginDto';
 export * from './MyClaimedCouponVm';
 export * from './MyCouponVm';
